# ml_cpp_pipeline

./: .gitignore  CMakeLists.txt  CMakeLists_tests_only.txt  CMakePresets.json  README.md  build.bat  build_vs2019.bat  build_vs2022.bat  vcpkg.json
.github/: copilot-instructions.md
.github/workflows/: c-cpp.yml
build_tests/: CMakeLists.txt
build_tests/tests/: CMakeLists.txt  classifier_service_test  csv_writer_test  iris_test
build_tests/wrangler/: main.cpp
data/db/: db.sql  ddl.sql  dml.sql
extractor/: CMakeLists.txt  iris.h  iris_old.h  main.cpp
scripts/: build.ps1  build.sh  client_test.sh  extractor_db_model.ps1  extractor_db_model.sh  run_service.ps1  run_service.sh
service/: CMakeLists.txt  ClassifierService.h  client.cpp  main.cpp
service/proto/: grpc.cmake  iris.proto
tests/: CMakeLists.txt  README.md  test_classifier_service.cpp  test_csv_writer.cpp  test_iris.cpp
trainer/: CMakeLists.txt  main.cpp
wrangler/: CMakeLists.txt  CsvWriter.h  Iris.h  main.cpp
